--- a/webapp/src/main/webapp/resources/css/home.css
+++ b/webapp/src/main/webapp/resources/css/home.css
@@ -337,6 +337,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    color: var(--text);
 }
 .circle-icon {
     border: var(--text) 2px solid;
