Fixed like api and made posting channel dependant
Fixed context path like api failure and added some features for better
understanding of posting mechanics

--- a/webapp/src/main/webapp/resources/css/commons.css
+++ b/webapp/src/main/webapp/resources/css/commons.css
@@ -281,6 +281,18 @@ p {
     gap: 1rem;
 }
 
+.f-c-s-s {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    gap: 1rem;
+}
+
+.g-0{
+    gap:0 !important;
+}
+
 .f-c-sb-c {
     display: flex;
     flex-direction: column;
