--- a/webapp/src/main/webapp/resources/css/error.css
+++ b/webapp/src/main/webapp/resources/css/error.css
@@ -89,10 +89,21 @@
     cursor: pointer;
     transition: all 0.3s ease-in-out;
     box-shadow: 0 0 0 0 var(--primary);
+    &::before{
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 110%;
+        bottom: -5px;
+        left: 0;
+        -webkit-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        -o-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+    }
 }
 
 .goback-button:hover {
-    transform: translateY(-4px);
+    transform: translateY(-5px);
     box-shadow: 0 5px 0 0 var(--primary);
     color: var(--primary);
 }
