--- a/webapp/src/main/webapp/resources/css/home.css
+++ b/webapp/src/main/webapp/resources/css/home.css
@@ -113,7 +113,8 @@
 
 
 /*---------------------------------- Middle column ---------------------------------------------*/
-
+.cool-feed-button:before{
+}
 .upper-feed-buttons-box {
     padding: 1rem;
     margin-bottom: 1.25rem;
@@ -134,15 +135,28 @@
     & .cool-feed-button {
         text-align: center;
         overflow: hidden;
-
         font-weight: bold;
         cursor: pointer;
         padding: 1em 1em;
-        transition: all 0.3s ease-in-out;
         background-color: var(--onbackground);
         color: var(--text);
         border: 1px solid var(--text);
         border-radius: var(--border-radius);
+        position: relative;
+        transform: translateY(0);
+        /*transition: -webkit-transform .3s cubic-bezier(.5,2.5,.7,.7),-webkit-box-shadow .3s cubic-bezier(.5,2.5,.7,.7);*/
+        transition: all 0.3s ease-in-out;
+        &::before{
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 110%;
+            bottom: -5px;
+            left: 0;
+            -webkit-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+            -o-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+            transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        }
 
         &.active {
             transform: translateY(-4px);
@@ -160,10 +174,13 @@
         &:active,
         &:focus-visible {
             transform: translateY(-4px);
-            box-shadow: 0 5px 0 0 var(--primary);
+            box-shadow: 0 4px 0 0 var(--primary);
             color: var(--primary);
             border: var(--border);
+
         }
+
+
     }
 
     & .coolest-button {
@@ -176,15 +193,27 @@
         background-color: var(--onbackground);
         color: var(--text);
         border: 1px solid var(--text);
-        position: relative;
         border-radius: var(--border-hard);
 
+        position: relative;
+        transform: translateY(0);
+        &::before{
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 110%;
+            bottom: -5px;
+            left: 0;
+            -webkit-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+            -o-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+            transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        }
         &.active {
             border: 1px solid transparent;
             background-color: var(--error);
             color: var(--background);
             box-shadow: 0 5px 0 0 #f1d283;
-            transform: translateY(-4px);
+            transform: translateY(-5px);
         }
 
         &:before {
@@ -251,9 +280,21 @@
     border-radius: var(--border-radius);
     transition: all 0.3s ease-in-out;
     overflow: hidden;
-
+    position: relative;
+    transform: translateY(0);
+    &::before{
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 110%;
+        bottom: -5px;
+        left: 0;
+        -webkit-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        -o-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+    }
     &:hover {
-        transform: translateY(-4px);
+        transform: translateY(-5px);
         box-shadow: -3px 5px 0 0 var(--primary);
         border: var(--border);
     }
@@ -557,17 +598,30 @@
     border: 1px solid var(--text);
     border-radius: var(--border-radius);
 
+    position: relative;
+    transform: translateY(0);
+    &::before{
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 110%;
+        bottom: -5px;
+        left: 0;
+        -webkit-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        -o-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+    }
 
     &:hover,
     &:focus-visible {
         border: var(--border);
-        transform: translateY(-4px);
+        transform: translateY(-5px);
         box-shadow: -2px 4px 0 0 var(--primary);
         color: var(--primary);
     }
 
     &.active {
-        transform: translateY(-4px);
+        transform: translateY(-5px);
         box-shadow: -2px 5px 0 0 var(--primary);
         color: var(--background);
         border: 1px solid var(--background);
@@ -579,14 +633,14 @@
         border: 1px solid var(--admin-color);
 
         &:hover {
-            transform: translateY(-4px);
+            transform: translateY(-5px);
             box-shadow: -2px 4px 0 0 var(--admin-color);
             color: var(--admin-color);
         }
 
         &.active {
             background-color: var(--background);
-            transform: translateY(-4px);
+            transform: translateY(-5px);
             box-shadow: -2px 4px 0 0 var(--admin-color);
             color: var(--admin-color);
         }
@@ -634,7 +688,19 @@
     border: 1px solid var(--accent);
     border-radius: var(--border-hard);
     transition: all 0.3s ease-in-out;
-
+    position: relative;
+    transform: translateY(0);
+    &::before{
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 110%;
+        bottom: -4px;
+        left: 0;
+        -webkit-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        -o-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+    }
     &.static {
         margin-bottom: 2px;
 
@@ -744,7 +810,19 @@
         padding: 5px 10px;
         outline: none;
         transition: all 0.3s ease-in-out;
-
+        position: relative;
+        transform: translateY(0);
+        &::before{
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 110%;
+            bottom: -4px;
+            left: 0;
+            -webkit-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+            -o-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+            transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        }
         &::placeholder {
             color: var(--lighttext);
             opacity: 0.8;
@@ -951,7 +1029,19 @@ input[type=file]::file-selector-button:hover {
     background-color: var(--onbackground);
     margin: 5px;
     transition: all 0.3s ease-in-out;
-
+    position: relative;
+    transform: translateY(0);
+    &::before{
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 110%;
+        bottom: -4px;
+        left: 0;
+        -webkit-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        -o-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+    }
     &.small-a {
         width: 30px;
         height: 30px;
@@ -960,15 +1050,15 @@ input[type=file]::file-selector-button:hover {
     }
 
     &:hover:not(.active) {
-        transform: translateY(-2px);
-        box-shadow: 0 5px 0 0 var(--primary);
+        transform: translateY(-4px);
+        box-shadow: 0 4px 0 0 var(--primary);
         color: var(--primary);
     }
 
     &.active {
-        transform: translateY(-2px);
+        transform: translateY(-4px);
         border: 1px solid var(--background);
-        box-shadow: 0 5px 0 0 var(--primary);
+        box-shadow: 0 4px 0 0 var(--primary);
         color: var(--background);
         background-color: var(--primary);
     }
@@ -1085,11 +1175,23 @@ footer div {
         color: var(--error);
         background-color: var(--darkonbackground);
         border: 1px solid var(--error);
-
+        position: relative;
+        transform: translateY(0);
+        &::before{
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 110%;
+            bottom: -4px;
+            left: 0;
+            -webkit-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+            -o-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+            transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        }
         &:hover {
             border: 1px solid var(--error);
             transform: translateY(-4px);
-            box-shadow: 0 5px 0 0 var(--error);
+            box-shadow: 0 4px 0 0 var(--error);
             color: var(--error);
         }
     }
@@ -1114,7 +1216,19 @@ footer div {
     border: 1px solid var(--bordercolor);
     border-radius: var(--border-hard);
     transition: all 0.3s ease-in-out;
-
+    position: relative;
+    transform: translateY(0);
+    &::before{
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 110%;
+        bottom: -4px;
+        left: 0;
+        -webkit-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        -o-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+    }
     &.outlined {
         color: var(--primary);
         background-color: var(--darkonbackground);
@@ -1131,7 +1245,7 @@ footer div {
         &:hover {
             border: 1px solid var(--primary);
             transform: translateY(-4px);
-            box-shadow: 0 5px 0 0 var(--primary);
+            box-shadow: 0 4px 0 0 var(--primary);
             color: var(--primary);
         }
     }
@@ -1160,7 +1274,19 @@ footer div {
     background-color: var(--background);
     color: var(--primary);
     border: 1px solid var(--primary);
-
+    position: relative;
+    transform: translateY(0);
+    &::before{
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 110%;
+        bottom: -4px;
+        left: 0;
+        -webkit-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        -o-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+    }
     &.red {
         padding: 7px 7px;
         font-size: 12px;
@@ -1173,7 +1299,7 @@ footer div {
         &:hover {
             border: 1px solid var(--error);
             transform: translateY(-4px);
-            box-shadow: 0 5px 0 0 var(--error);
+            box-shadow: 0 4px 0 0 var(--error);
             color: var(--error);
         }
     }
@@ -1183,7 +1309,7 @@ footer div {
     &:active,
     &:focus-visible {
         transform: translateY(-4px);
-        box-shadow: 0 5px 0 0 var(--primary);
+        box-shadow: 0 4px 0 0 var(--primary);
         color: var(--primary);
     }
 
@@ -1223,7 +1349,19 @@ footer div {
     padding: 5px 10px;
     outline: none;
     transition: all 0.3s ease-in-out;
-
+    position: relative;
+    transform: translateY(0);
+    &::before{
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 110%;
+        bottom: -4px;
+        left: 0;
+        -webkit-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        -o-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+    }
     &::placeholder {
         color: var(--lighttext);
         opacity: 0.8;
@@ -1240,7 +1378,19 @@ footer div {
 
 .grey-input {
     border: 1px solid var(--lighttext);
-
+    position: relative;
+    transform: translateY(0);
+    &::before{
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 110%;
+        bottom: -4px;
+        left: 0;
+        -webkit-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        -o-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+    }
     &:active,
     &:hover,
     &:focus-visible {
@@ -1522,10 +1672,22 @@ h6 {
     border: 1px solid var(--text);
     border-radius: var(--border-radius);
     transition: all 0.3s ease-in-out;
-
+    position: relative;
+    transform: translateY(0);
+    &::before{
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 110%;
+        bottom: -4px;
+        left: 0;
+        -webkit-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        -o-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+    }
     &:hover {
-        transform: translateY(-3px);
-        box-shadow: -2px 3px 0 var(--text);
+        transform: translateY(-4px);
+        box-shadow: -2px 4px 0 var(--text);
         cursor: pointer;
     }
 }
@@ -1784,7 +1946,19 @@ input[type=time] {
     outline: 0;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
-
+    position: relative;
+    transform: translateY(0);
+    &::before{
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 110%;
+        bottom: -4px;
+        left: 0;
+        -webkit-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        -o-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+    }
     &::-webkit-calendar-picker-indicator {
         color: var(--text);
         appearance: none;
@@ -1864,7 +2038,19 @@ input[type=time] {
             cursor: pointer;
             transition: all 0.3s ease-in-out;
             background-color: var(--background);
-
+            position: relative;
+            transform: translateY(0);
+            &::before{
+                content: "";
+                position: absolute;
+                width: 100%;
+                height: 110%;
+                bottom: -4px;
+                left: 0;
+                -webkit-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+                -o-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+                transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+            }
             &.n-workers {
                 background-color: var(--onbackground);
             }
