--- a/webapp/src/main/webapp/resources/css/landingPage.css
+++ b/webapp/src/main/webapp/resources/css/landingPage.css
@@ -85,7 +85,19 @@
     cursor: pointer;
     transition: all 0.3s ease-in-out;
     box-shadow: 0 0 0 0 var(--primary);
-
+    position: relative;
+    transform: translateY(0);
+    &::before{
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 110%;
+        bottom: -4px;
+        left: 0;
+        -webkit-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        -o-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+    }
     &:hover,
     &:active,
     &:focus {
@@ -127,7 +139,19 @@ input[type="number"],
     padding: 5px 10px;
     outline: none;
     transition: all 0.3s ease-in-out;
-
+    position: relative;
+    transform: translateY(0);
+    &::before{
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 110%;
+        bottom: -4px;
+        left: 0;
+        -webkit-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        -o-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+    }
     &::placeholder {
         color: var(--lighttext);
         opacity: 0.8;
@@ -209,7 +233,19 @@ input[type="number"],
     padding: 5px 10px;
     outline: none;
     transition: all 0.3s ease-in-out;
-
+    position: relative;
+    transform: translateY(0);
+    &::before{
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 110%;
+        bottom: -4px;
+        left: 0;
+        -webkit-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        -o-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+    }
     &::placeholder {
         color: var(--lighttext);
         opacity: 0.8;
