--- a/webapp/src/main/webapp/resources/css/service.css
+++ b/webapp/src/main/webapp/resources/css/service.css
@@ -92,9 +92,20 @@
     overflow: hidden;
     white-space: normal;
     display: block;
+    position: relative;
     transform: translateY(0);
     cursor: pointer;
-
+    &::before{
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 110%;
+        bottom: -5px;
+        left: 0;
+        -webkit-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        -o-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+    }
     & svg {
         width: 85px;
         height: 85px;
@@ -166,8 +177,8 @@
     }
 
     &:hover {
-        transform: translateY(-4px);
-        box-shadow: 0 4px 0 0 var(--primary);
+        transform: translateY(-5px);
+        box-shadow: 0 5px 0 0 var(--primary);
     }
 
     & .background-cover {
