--- a/webapp/src/main/webapp/resources/css/home.css
+++ b/webapp/src/main/webapp/resources/css/home.css
@@ -415,15 +415,15 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    color: var(--text);
+    color: var(--lightertext);
     gap:10px;
 }
 
 .circle-icon {
-    border: var(--text) 2px solid;
+    border: var(--lightertext) 1px solid;
     border-radius: 50px;
-    width: 50px;
-    height: 50px;
+    width: 45px;
+    height: 45px;
     display: flex;
     justify-content: center;
     align-items: center;
