--- a/webapp/src/main/webapp/resources/css/commons.css
+++ b/webapp/src/main/webapp/resources/css/commons.css
@@ -57,6 +57,8 @@ body {
     --light-green: #9ad379;
     --star-background: #dedad4;
     --star-active: #ff9c1a;
+    --lila: #7d7ae3;
+    --to-lila: #dfdfea;
 
     --border-light: 5px;
     --border-radius: 10px;
@@ -88,6 +90,8 @@ body {
     --light-green: #9ad379;
     --star-background: #4b4f4f;
     --star-active: #ff9c1a;
+    --lila: #697eb7;
+    --to-lila: rgb(72, 78, 89);
 
 }
 
@@ -422,6 +426,9 @@ p {
 
 .font-size-24 {
     font-size: 24px;
+}
+.font-size-20 {
+    font-size: 20px;
 }
 
 .font-weight-bold {
