--- a/webapp/src/main/webapp/resources/css/home.css
+++ b/webapp/src/main/webapp/resources/css/home.css
@@ -10,6 +10,9 @@
     flex: 1;
     max-width: 250px;
 }
+.column-center{
+    flex: 4;
+}
 
 .column-right {
     max-width: 320px;
@@ -32,10 +35,49 @@
 }
 
 @media (max-width: 993px) {
-    .column-left,
     .column-right {
         display: none;
     }
+
+   .row.init{
+        all: unset;
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        align-items: center;
+       width: 100%;
+       & .left-column-container{
+           all: unset;
+       }
+       .column-left{
+           width: 100%;
+           max-width: 565px;
+           flex: 4;
+           & .left-box{
+               display: flex;
+               flex-direction: row;
+
+               flex-wrap: wrap;
+               justify-content: space-between;
+               grid-column-gap: 3em;
+               flex:4 ;
+               padding: 10px;
+
+               & .cool-left-button{
+                   width: 100%;
+               }
+           }
+           & .divider{
+               display: none;
+           }
+
+       }
+       & #center-grid{
+           padding: 0 12px !important;
+           justify-content: center;
+       }
+   }
+
 }
 
 .c-light-text {
@@ -119,6 +161,19 @@
     border: 1px solid var(--secondary);
     padding: 10px;
 }
+.filters-marketplace{
+    background-color: var(--on-onbackground);
+    border-radius: var(--border-hard);
+    border: 1px solid var(--secondary);
+    padding-left: 10px;
+    & .sub-filters{
+        background-color: var(--to-lila);
+        border-radius: var(--border-hard);
+        padding: 10px;
+
+    }
+}
+
 .cool-feed-button:before{
 }
 .upper-feed-buttons-box {
@@ -175,6 +230,22 @@
             border-radius: var(--border-hard) !important;
         }
 
+        &.marketplace-button{
+            padding: 7px 7px;
+            font-size: 12px;
+
+            color: var(--text);
+            background-color: var(--onbackground);
+            border: 1px solid var(--lighttext);
+            transition: all 0.3s ease-in-out;
+            &.active,
+            &:hover {
+                border: 1px solid var(--lila);
+                transform: translateY(-4px);
+                box-shadow: 0 4px 0 0 var(--lila);
+                color: var(--lila);
+            }
+        }
         &:hover,
         &:active,
         &:focus-visible {
@@ -637,6 +708,24 @@
         color: var(--background);
         border: 1px solid var(--background);
         background-color: var(--primary);
+    }
+
+    &.lila{
+        &:hover {
+            transform: translateY(-5px);
+            box-shadow: -2px 4px 0 0 var(--lila);
+            color: var(--lila);
+            border: 1px solid var(--lila);
+        }
+
+        &.active {
+
+            transform: translateY(-5px);
+            box-shadow: -2px 5px 0 0 var(--lila);
+            color: var(--always-background);
+            border: 1px solid var(--background);
+            background-color: var(--lila);
+        }
     }
 
     &.admin-button {
@@ -1105,6 +1194,12 @@ footer div {
     animation: wave-footer 3s linear;
     animation-iteration-count: infinite;
     fill: var(--primary);
+    &.lila{
+        fill: var(--lila);
+    }
+    &.admin{
+        fill: var(--admin-color);
+    }
 }
 
 
@@ -1357,7 +1452,43 @@ footer div {
             color: var(--error);
         }
     }
+    &.product-button{
+        padding: 7px 7px;
+        font-size: 12px;
 
+        color: var(--text);
+        background-color: var(--onbackground);
+        border: 1px solid var(--lighttext);
+        border-radius: var(--border-hard) 0 0 var(--border-hard) ;
+        transition: all 0.3s ease-in-out;
+        border-right: transparent;
+
+        &:hover {
+            border: 1px solid var(--lila);
+            transform: translateY(-4px);
+            box-shadow: 0 4px 0 0 var(--lila);
+            border-right: transparent;
+
+            color: var(--lila);
+        }
+    }
+    &.marketplace-button{
+        padding: 7px 7px;
+        font-size: 12px;
+
+        color: var(--text);
+        background-color: var(--onbackground);
+        border: 1px solid var(--lighttext);
+        border-radius: var(--border-hard) ;
+        transition: all 0.3s ease-in-out;
+
+        &:hover {
+            border: 1px solid var(--lila);
+            transform: translateY(-4px);
+            box-shadow: 0 4px 0 0 var(--lila);
+            color: var(--lila);
+        }
+    }
 
     &:hover,
     &:active,
@@ -2237,5 +2368,125 @@ input[type=time] {
 
     & .item.checked .check-icon {
         transform: scale(1);
+    }
+}
+
+.product-grid-row{
+    grid-row-gap: 0;
+    grid-column-gap: 1em;
+    justify-content: start;
+}
+
+
+.product-card{
+    margin-bottom: 1.25rem;
+    padding: 0;
+    width: 200px;
+    height: 300px;
+    background-color: var(--onbackground);
+    border: 1px solid var(--text);
+    border-radius: var(--border-radius);
+    transition: all 0.3s ease-in-out;
+    overflow: hidden;
+    position: relative;
+    transform: translateY(0);
+    color: var(--text);
+    &::before{
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 110%;
+        bottom: -5px;
+        left: 0;
+        -webkit-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        -o-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        pointer-events: none;
+    }
+    &:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 5px 0 0 var(--lila);
+        border: 1px solid var(--lila);
+    }
+
+
+    & .header{
+        height: 60%;
+
+        & .img-product{
+            width: 100%;
+            height: 100%;
+            & img{
+                object-fit: cover;
+                object-position: center bottom;
+                width: 100%;
+                max-height: 30vh;
+            }
+        }
+    }
+    & .footer{
+        height: 40%;
+        background-color: var(--on-onbackground);
+        & .product-title{
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            font-size: 1em;
+            -webkit-box-orient: vertical;
+            max-height: calc(1em * 3.5);
+            line-height: 1.5;
+        }
+    }
+
+}
+
+.inside{
+    z-index:9;
+    background: var(--lila);
+    width:140px;
+    height:140px;
+    position: absolute;
+    top: -70px;
+    right: -70px;
+    border-radius: 0 0 200px 200px;
+    transition: all 0.5s, border-radius 2s, top 1s;
+    overflow: hidden;
+    & .icon{
+        position:absolute;
+        right:85px;
+        top:85px;
+        color: var(--always-background);
+        opacity: 1;
+    }
+    &:hover{
+        width:100%;
+        right:0;
+        top:0;
+        border-radius: 0;
+        height:60%;
+        .icon{
+            opacity: 0;
+            right:15px;
+            top:15px;
+        }
+        .contents{
+            opacity: 1;
+        }
+    }
+    & .contents{
+        padding: 5%;
+        opacity: 0;
+        transition: opacity 0.2s, transform 0.8s;
+        & table{
+            text-align:left;
+            width:100%;
+        }
+        & h1, p, table{
+            color: white;
+        }
+        & p{
+            font-size:13px;
+        }
     }
 }
