--- a/webapp/src/main/webapp/resources/css/home.css
+++ b/webapp/src/main/webapp/resources/css/home.css
@@ -815,6 +815,15 @@
             background-color: var(--accent);
         }
     }
+    &.marketplace-tag{
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
+        font-size: 1em;
+        -webkit-box-orient: vertical;
+        line-height: 1.5;
+    }
 
     &:hover {
         cursor: pointer;
@@ -1553,6 +1562,15 @@ footer div {
         opacity: 0.8;
     }
 
+    &.marketplace-input{
+        border: 1px solid var(--lila);
+        &:active,
+        &:hover,
+        &:focus-visible {
+            transform: translateY(-4px);
+            box-shadow: -3px 4px var(--lila);
+        }
+    }
     &:active,
     &:hover,
     &:focus-visible {
@@ -2447,15 +2465,15 @@ input[type=time] {
     width:140px;
     height:140px;
     position: absolute;
-    top: -70px;
-    right: -70px;
-    border-radius: 0 0 200px 200px;
-    transition: all 0.5s, border-radius 2s, top 1s;
+    top: -85px;
+    right: -85px;
+    border-radius: 0 0 100px 50px;
+    transition: all 0.5s, border-radius 2s, top 0.5s;
     overflow: hidden;
     & .icon{
         position:absolute;
-        right:85px;
-        top:85px;
+        right:100px;
+        top:100px;
         color: var(--always-background);
         opacity: 1;
     }
@@ -2482,11 +2500,103 @@ input[type=time] {
             text-align:left;
             width:100%;
         }
-        & h1, p, table{
-            color: white;
+        & h1,
+        & p,
+        & table{
+            color: var(--always-background);
         }
         & p{
             font-size:13px;
         }
     }
+}
+
+/*-------------------------------------------------------Publishing Sell Creation--------------------------*/
+
+.upload__box {
+    padding: 40px;
+}
+
+.upload__inputfile {
+    width: .1px;
+    height: .1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+}
+
+.upload__btn {
+    display: inline-block;
+    font-weight: 600;
+    color: #fff;
+    text-align: center;
+    min-width: 116px;
+    padding: 5px;
+    transition: all .3s ease;
+    cursor: pointer;
+    border: 2px solid var(--lila);
+    background-color: var(--lila);
+    border-radius: 10px;
+    line-height: 26px;
+    font-size: 14px;
+}
+
+.upload__btn:hover {
+    background-color: unset;
+    color: var(--lila);
+    transition: all .3s ease;
+}
+
+.upload__btn-box {
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: start;
+}
+
+.upload__img-wrap {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: start;
+    flex-wrap: wrap;
+    margin: 0 -10px;
+}
+
+.upload__img-box {
+    width: 200px;
+    padding: 0 10px;
+    margin-bottom: 12px;
+}
+
+.upload__img-close {
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    text-align: center;
+    line-height: 24px;
+    z-index: 1;
+    cursor: pointer;
+}
+
+.upload__img-close:after {
+    content: '\2716';
+    font-size: 14px;
+    color: var(--always-background);
+}
+
+.img-bg {
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    padding-bottom: 100%;
+    border-radius: var(--border-radius);
+
 }
