Add used and new tags to products

--- a/webapp/src/main/webapp/resources/css/commons.css
+++ b/webapp/src/main/webapp/resources/css/commons.css
@@ -59,6 +59,8 @@ body {
     --star-active: #ff9c1a;
     --lila: #7d7ae3;
     --to-lila: #dfdfea;
+    --used: #5975d0;
+    --new: #9ad379;
 
     --border-light: 5px;
     --border-radius: 10px;
