--- a/services/src/main/resources/templates/request-template_es.html
+++ b/services/src/main/resources/templates/request-template_es.html
@@ -118,7 +118,7 @@
                         <div align="center" class="alignment" style="line-height: 10px">
                           <a href="http://pawserver.it.itba.edu.ar/paw-2023b-02/"
                              target="_blank">
-                            <img alt="Yourlogo Light"
+                            <img alt="Neibo logo"
                                  src="https://cdn.discordapp.com/attachments/889581035195596800/1151956791417114654/mailbar.png"
                                  style="display: block; height: auto; border: 0; max-width: 268px; width: 100%;" title="Neibo" width="268">
                           </a>
