Allow for a request in marketplace product

--- a/webapp/src/main/webapp/resources/css/commons.css
+++ b/webapp/src/main/webapp/resources/css/commons.css
@@ -92,7 +92,7 @@ body {
     --light-green: #9ad379;
     --star-background: #4b4f4f;
     --star-active: #ff9c1a;
-    --lila: #697eb7;
+    --lila: #7d7ae3;
     --to-lila: rgb(72, 78, 89);
 
 }
