--- a/services/src/main/resources/templates/request-template_en.html
+++ b/services/src/main/resources/templates/request-template_en.html
@@ -166,7 +166,7 @@
                                             <td class="pad"
                                                 style="padding-bottom: 10px; padding-left: 30px; padding-right: 30px; padding-top: 10px;">
                                                 <div style="color: #2f2f2f; font-family: Arial, Helvetica Neue, Helvetica, sans-serif; font-size: 16px; line-height: 150%; text-align: left; mso-line-height-alt: 24px;">
-                                                    <p style="margin: 0;" th:text="'You have receieved a new request from ' + ${senderName} + ' ' + ${senderSurname} ' for your product: ' + ${productName}"></p>
+                                                    <p style="margin: 0;" th:text="'You have receieved a new request from ' + ${senderName} + ' ' + ${senderSurname} + ' for your product: ' + ${productName}"></p>
                                                     <p style="margin: 0;" th:text="${senderName} + ' has left you a message: '"></p>
                                                     <div style="font-size: 14px; background-color: #f0f0f0; padding: 10px; border: 1px solid #000; margin-top: 10px;">
                                                         <p style="margin: 0; font-size: 12px; line-height: 150%;" th:text="${message}"></p>
