--- a/webapp/src/main/webapp/resources/css/home.css
+++ b/webapp/src/main/webapp/resources/css/home.css
@@ -232,7 +232,7 @@
         }
 
         &.marketplace-button{
-            padding: 7px 7px;
+            padding: 0.7em 1em;
             font-size: 12px;
 
             color: var(--text);
@@ -1085,8 +1085,23 @@ input[type=file]::file-selector-button:hover {
 
 .loader {
     display: block;
+
     --height-of-loader: 10px;
     --loader-color: var(--primary);
+    &.marketplace{
+        --loader-color: var(--lila);
+        &::before {
+            content: "";
+            position: absolute;
+            background: var(--lila);
+            top: 0;
+            left: 0;
+            width: 0;
+            height: 100%;
+            border-radius: 30px;
+            animation: moving 1s ease-in-out infinite;
+        }
+    }
     width: 30%;
     height: var(--height-of-loader);
     border-radius: 30px;
