Advance on product questions

--- a/webapp/src/main/webapp/resources/css/home.css
+++ b/webapp/src/main/webapp/resources/css/home.css
@@ -2315,7 +2315,7 @@ input[type=time] {
 
         & .select-btn {
             display: flex;
-            height: 40px;
+            height: var(--input-height);
             align-items: center;
             justify-content: space-between;
             padding: 0 10px 0 10px;
