--- a/webapp/src/main/webapp/resources/css/commons.css
+++ b/webapp/src/main/webapp/resources/css/commons.css
@@ -66,6 +66,7 @@ body {
     --border-radius: 10px;
     --border-hard: 50px;
     --border: 1px solid var(--primary);
+    --input-height: 35px;
 }
 
 .dark-mode {
@@ -178,6 +179,8 @@ form {
     margin-bottom: 0;
 }
 
+
+
 select,
 input[type="text"],
 input[type="password"],
@@ -190,8 +193,9 @@ input[type="url"],
 input[type="search"],
 input[type="select"] {
     width: 100%;
-    height: 35px;
+    height: var(--input-height);
 }
+
 
 input[type="checkbox"] {
     position: relative;
