--- a/webapp/src/main/webapp/resources/css/landingPage.css
+++ b/webapp/src/main/webapp/resources/css/landingPage.css
@@ -130,7 +130,7 @@ input[type="text"],
 input[type="number"],
 .input {
     width: 100%;
-    height: 40px;
+    height: var(--input-height);
     border-radius: var(--border-hard);
     border: 1px solid var(--primary);
     background-color: var(--background);
