Create departemnt urls for different products

--- a/webapp/src/main/webapp/resources/css/home.css
+++ b/webapp/src/main/webapp/resources/css/home.css
@@ -853,6 +853,16 @@
     align-items: center;
 }
 
+.hover-a{
+    color: var(--accent);
+    &.marketplace{
+        &:hover{
+            cursor: pointer;
+            color: var(--lila);
+        }
+    }
+
+}
 
 .cool-static-container {
     overflow: hidden;
